<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/lines3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:src="@drawable/header_pic" />

            <TextView
                android:id="@+id/main_page_recept"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-60dp"
                android:fontFamily="@font/roboto_slab_bold"
                android:gravity="center"
                android:text="@string/user"
                android:textColor="@color/red"
                android:textSize="32dp"
                android:textStyle="bold" />
        </LinearLayout>

                <TextView
                    android:id="@+id/profile_auth_reg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/auth"
                    android:layout_marginVertical="20dp"
                    android:layout_marginHorizontal="10dp"
                    android:textSize="24sp"
                    android:layout_below="@+id/profile_layout"
                    android:fontFamily="@font/roboto_slab_bold"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <EditText
                    android:id="@+id/editTextPhone"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="10dp"
                    android:ems="10"
                    android:layout_marginTop="10dp"
                    android:inputType="phone"
                    android:background="@drawable/edit_text_design"
                    android:hint="@string/enter_phone"
                    android:paddingHorizontal="20dp"
                    android:layout_below="@+id/profile_auth_reg"/>

                <EditText
                    android:id="@+id/editTextPass"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="10dp"
                    android:ems="10"
                    android:layout_marginTop="30dp"
                    android:inputType="textPassword"
                    android:background="@drawable/edit_text_design"
                    android:hint="@string/enter_pass"
                    android:paddingHorizontal="20dp"
                    android:layout_below="@+id/editTextPhone"/>

        <Button
            android:id="@+id/btn_auth"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextPass"
            android:layout_centerInParent="true"
            android:layout_marginVertical="40dp"
            android:background="@drawable/btn_design"
            android:fontFamily="@font/roboto_slab_bold"
            android:text="@string/enter"
            android:textColor="@color/white"
            android:textSize="20sp" />


        <LinearLayout
            android:id="@+id/down_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:paddingHorizontal="10dp">

            <TextView
                android:id="@+id/text_auth"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/auth"
                android:textSize="24sp"
                android:fontFamily="@font/roboto_slab_bold"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/red"
                />

            <TextView
                android:id="@+id/text_reg"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/reg"
                android:textSize="24sp"
                android:gravity="center"
                android:fontFamily="@font/roboto_slab_bold"
                android:textStyle="bold"
                android:textColor="@color/black"/>
        </LinearLayout>
    </RelativeLayout>


</FrameLayout>