<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/lines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/header_pic" />

            <TextView
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-60dp"
                android:fontFamily="@font/roboto_slab_bold"
                android:gravity="center"
                android:text="@string/about"
                android:textColor="@color/red"
                android:textSize="32dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/about_img"
                android:layout_width="match_parent"
                android:layout_height="360dp"
                android:layout_marginTop="40sp"
                android:src="@drawable/about_img" />

            <TextView
                android:id="@+id/about_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto"
                android:lineSpacingExtra="4sp"
                android:text="@string/about_text"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/lines2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:src="@drawable/header_pic" />

            <TextView
                android:id="@+id/main_page_catalog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-60dp"
                android:fontFamily="@font/roboto_slab_bold"
                android:gravity="center"
                android:text="@string/catalog"
                android:textColor="@color/red"
                android:textSize="32dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/main_category_koldasa"
                        android:layout_width="match_parent"
                        android:layout_height="280dp"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:background="@drawable/category_card_vertical">

                        <ImageView
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:src="@drawable/pic1"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="39dp"
                            android:scaleType="centerCrop"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/kolbasa"
                            android:gravity="center_horizontal"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="12dp"
                            android:fontFamily="@font/roboto_slab_bold"
                            android:textSize="18sp"/>
                    </LinearLayout>

                <LinearLayout
                    android:id="@+id/main_category_delicates"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="280dp"
                    android:orientation="vertical"
                    android:background="@drawable/category_card_vertical">
                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:src="@drawable/pic3"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="39dp"
                        android:scaleType="centerCrop"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/delicates"
                        android:gravity="center_horizontal"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="12dp"
                        android:fontFamily="@font/roboto_slab_bold"
                        android:textSize="18sp"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">

                <LinearLayout
                    android:id="@+id/main_category_meat"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="280dp"
                    android:orientation="vertical"
                    android:background="@drawable/category_card_vertical">
                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:src="@drawable/pic2"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="39dp"
                        android:scaleType="centerCrop"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/meat"
                        android:gravity="center_horizontal"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="12dp"
                        android:fontFamily="@font/roboto_slab_bold"
                        android:textSize="18sp"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/main_category_zamorozka"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="280dp"
                    android:orientation="vertical"
                    android:layout_marginStart="-10dp"
                    android:background="@drawable/category_card_vertical">
                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="80dp"
                        android:src="@drawable/pic4"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="59dp"
                        android:scaleType="centerCrop"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pelmeni"
                        android:gravity="center_horizontal"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="12dp"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/roboto_slab_bold"
                        android:textSize="18sp"/>
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btn_catalog"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/btn_design"
                android:fontFamily="@font/roboto_slab_bold"
                android:text="@string/catalog"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/lines3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:src="@drawable/header_pic" />

            <TextView
                android:id="@+id/main_page_recept"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-60dp"
                android:fontFamily="@font/roboto_slab_bold"
                android:gravity="center"
                android:text="@string/recept"
                android:textColor="@color/red"
                android:textSize="32dp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recept_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="40sp"/>

            <Button
                android:id="@+id/btn_all_recepts"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_design"
                android:fontFamily="@font/roboto_slab_bold"
                android:text="@string/btn_all_recepts"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/lines4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:src="@drawable/header_pic" />

            <TextView
                android:id="@+id/contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-60dp"
                android:fontFamily="@font/roboto_slab_bold"
                android:gravity="center"
                android:text="@string/contact"
                android:textColor="@color/red"
                android:textSize="32dp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/phone_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="12dp"
                    android:src="@drawable/phone" />

                <TextView
                    android:id="@+id/phone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/phone_number"
                    android:textColor="@color/black"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/whatsapp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/whatsapp_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="12dp"
                    android:src="@drawable/whatsapp" />

                <TextView
                    android:id="@+id/whatsapp_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/whatsapp_number"
                    android:textColor="@color/black"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/telegram"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/telegram_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="12dp"
                    android:src="@drawable/telegramm" />

                <TextView
                    android:id="@+id/telegram_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/telegramm_nic"
                    android:textColor="@color/black"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/adress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/adress_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="12dp"
                    android:src="@drawable/adress" />

                <TextView
                    android:id="@+id/adress_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/adress"
                    android:textColor="@color/black"
                    android:textSize="24sp" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</FrameLayout>